@@ -117,8 +117,8 @@ static constexpr struct command commands[] = {
 	{ "listneighbors", PERMISSION_READ, 0, 0, handle_listneighbors },
 #endif
 	{ "listpartitions", PERMISSION_READ, 0, 0, handle_listpartitions },
-	{ "listplaylist", PERMISSION_READ, 1, 1, handle_listplaylist },
-	{ "listplaylistinfo", PERMISSION_READ, 1, 1, handle_listplaylistinfo },
+	{ "listplaylist", PERMISSION_READ, 1, 2, handle_listplaylist },
+	{ "listplaylistinfo", PERMISSION_READ, 1, 2, handle_listplaylistinfo },
 	{ "listplaylists", PERMISSION_READ, 0, 0, handle_listplaylists },
 	{ "load", PERMISSION_ADD, 1, 3, handle_load },
 	{ "lsinfo", PERMISSION_READ, 0, 1, handle_lsinfo },
