@@ -18,6 +18,8 @@ struct Partition;
 bool
 playlist_file_print(Response &r, Partition &partition,
 		    const SongLoader &loader,
-		    const LocatedUri &uri, bool detail);
+		    const LocatedUri &uri,
+			unsigned start_index, unsigned end_index,
+			bool detail);
 
 #endif
